Servicios de monitoreo

--- a/index.htm
+++ b/index.htm
@@ -327,84 +327,89 @@
                         </div>
                     </div>
                 </div>
-        <section id="Servicios Monitoreo" class="mb-5">
+        <section id="ServiciosMonitoreo" class="mb-5">
             <div class="container">
                 <span class="RobotoBold fs_24px text-uppercase">Servicios de Monitoreo</span>
                 <h2 class="py-3 ">Servicios de logística Seguros, más rápidos y confiables en donde sea</h2>
                 <div class="row">
-                    <div class="col-12 col-md-6 col-xl-3 p-1">
-                        <div class="card bg-slave border-0 p-3 m-2">
-                            <div class="icon-cont">
-                                <img class="w-48px" src="img/icons/gps.svg" alt="Servicio Internacional">
+                    <div class="col-12 col-lg-8">
+                        <div class="row">
+                            <div class="col-12 col-md-6 col-xl-6 p-1">
+                                <div class="card bg-slave border-0 p-3 m-2">
+                                    <div class="icon-cont">
+                                        <img class="w-48px" src="img/icons/gps.svg" alt="Servicio Internacional">
+                                    </div>
+                                    <h3 class="title_servicioMonitoreo fs_22px pt-2">Seguimiento en tiempo real</h3>
+                                    <p>Trabajamos con distintos socios internacionales alrededor del mundo</p>
+                                </div>
                             </div>
-                            <h3 class="title_servicioMonitoreo fs_22px pt-2">Seguimiento en tiempo real</h3>
-                            <p>Trabajamos con distintos socios internacionales alrededor del mundo</p>
+                            <div class="col-12 col-md-6 col-xl-6 p-1">
+                                <div class="card bg-slave border-0 p-3 m-2">
+                                    <div class="icon-cont">
+                                        <img class="w-48px" src="img/icons/custodia.svg" alt="Soporte 24/7">
+                                    </div>
+                                    <h3 class="title_servicioMonitoreo fs_22px pt-2">Custodia Virtual</h3>
+                                    <p>Trabajamos con distintos socios internacionales alrededor del mundo</p>
+                                </div>
+                            </div>
+                            <div class="col-12 col-md-6 col-xl-6 p-1">
+                                <div class="card bg-slave border-0 p-3 m-2">
+                                    <div class="icon-cont">
+                                        <img class="w-48px" src="img/icons/rapido.svg" alt="Rápido y Seguro">
+                                    </div>
+                                    <h3 class="title_servicioMonitoreo fs_22px pt-2">Optimización de Tiempo en Transito</h3>
+                                    <p>Trabajamos con distintos socios internacionales alrededor del mundo</p>
+                                </div>
+                            </div>
+                            <div class="col-12 col-md-6 col-xl-6 p-1">
+                                <div class="card bg-slave border-0 p-3 m-2">
+                                    <div class="icon-cont">
+                                        <img class="w-48px" src="img/icons/riesgos.svg" alt="Almacenaje a nivel nacional">
+                                    </div>
+                                    <h3 class="title_servicioMonitoreo fs_22px pt-2">Detección de riesgos</h3>
+                                    <p>Trabajamos con distintos socios internacionales alrededor del mundo</p>
+                                </div>
+                            </div>
+                            <div class="col-12 col-md-6 col-xl-6 p-1">
+                                <div class="card bg-slave border-0 p-3 m-2">
+                                    <div class="icon-cont">
+                                        <img class="w-48px" src="img/icons/24-7.svg" alt="Optimización de tiempos en transito">
+                                    </div>
+                                    <h3 class="title_servicioMonitoreo fs_22px pt-2">Trazabilidad 24/7</h3>
+                                    <p>Trabajamos con distintos socios internacionales alrededor del mundo</p>
+                                </div>
+                            </div>
+                            <div class="col-12 col-md-6 col-xl-6 p-1">
+                                <div class="card bg-slave border-0 p-3 m-2">
+                                    <div class="icon-cont">
+                                        <img class="w-48px" src="img/icons/protocolos.svg" alt="Custodia virtual">
+                                    </div>
+                                    <h3 class="title_servicioMonitoreo fs_22px pt-2">Protocolos de seguridad</h3>
+                                    <p>Trabajamos con distintos socios internacionales alrededor del mundo</p>
+                                </div>
+                            </div>
+                            <div class="col-12 col-md-6 col-xl-6 p-1">
+                                <div class="card bg-slave border-0 p-3 m-2">
+                                    <div class="icon-cont">
+                                        <img class="w-48px" src="img/icons/ruta.svg" alt="Optimización de tiempos en transito">
+                                    </div>
+                                    <h3 class="title_servicioMonitoreo fs_22px pt-2">Rutas diseñadas para cada cliente</h3>
+                                    <p>Trabajamos con distintos socios internacionales alrededor del mundo</p>
+                                </div>
+                            </div>
+                            <div class="col-12 col-md-6 col-xl-6 p-1">
+                                <div class="card bg-slave border-0 p-3 m-2">
+                                    <div class="icon-cont">
+                                        <img class="w-48px" src="img/icons/asistencia.svg" alt="Custodia virtual">
+                                    </div>
+                                    <h3 class="title_servicioMonitoreo fs_22px pt-2">Asistencia logística</h3>
+                                    <p>Trabajamos con distintos socios internacionales alrededor del mundo</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 col-xl-3 p-1">
-                        <div class="card bg-slave border-0 p-3 m-2">
-                            <div class="icon-cont">
-                                <img class="w-48px" src="img/icons/custodia.svg" alt="Soporte 24/7">
-                            </div>
-                            <h3 class="title_servicioMonitoreo fs_22px pt-2">Custodia Virtual</h3>
-                            <p>Trabajamos con distintos socios internacionales alrededor del mundo</p>
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-6 col-xl-3 p-1">
-                        <div class="card bg-slave border-0 p-3 m-2">
-                            <div class="icon-cont">
-                                <img class="w-48px" src="img/icons/rapido.svg" alt="Rápido y Seguro">
-                            </div>
-                            <h3 class="title_servicioMonitoreo fs_22px pt-2">Optimización de Tiempo en Transito</h3>
-                            <p>Trabajamos con distintos socios internacionales alrededor del mundo</p>
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-6 col-xl-3 p-1">
-                        <div class="card bg-slave border-0 p-3 m-2">
-                            <div class="icon-cont">
-                                <img class="w-48px" src="img/icons/riesgos.svg" alt="Almacenaje a nivel nacional">
-                            </div>
-                            <h3 class="title_servicioMonitoreo fs_22px pt-2">Detección de riesgos</h3>
-                            <p>Trabajamos con distintos socios internacionales alrededor del mundo</p>
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-6 col-xl-3 p-1">
-                        <div class="card bg-slave border-0 p-3 m-2">
-                            <div class="icon-cont">
-                                <img class="w-48px" src="img/icons/24-7.svg"
-                                    alt="Optimización de tiempos en transito">
-                            </div>
-                            <h3 class="title_servicioMonitoreo fs_22px pt-2">Trazabilidad 24/7</h3>
-                            <p>Trabajamos con distintos socios internacionales alrededor del mundo</p>
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-6 col-xl-3 p-1">
-                        <div class="card bg-slave border-0 p-3 m-2">
-                            <div class="icon-cont">
-                                <img class="w-48px" src="img/icons/protocolos.svg" alt="Custodia virtual">
-                            </div>
-                            <h3 class="title_servicioMonitoreo fs_22px pt-2">Protocolos de seguridad</h3>
-                            <p>Trabajamos con distintos socios internacionales alrededor del mundo</p>
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-6 col-xl-3 p-1">
-                        <div class="card bg-slave border-0 p-3 m-2">
-                            <div class="icon-cont">
-                                <img class="w-48px" src="img/icons/ruta.svg"
-                                    alt="Optimización de tiempos en transito">
-                            </div>
-                            <h3 class="title_servicioMonitoreo fs_22px pt-2">Rutas diseñadas para cada cliente</h3>
-                            <p>Trabajamos con distintos socios internacionales alrededor del mundo</p>
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-6 col-xl-3 p-1">
-                        <div class="card bg-slave border-0 p-3 m-2">
-                            <div class="icon-cont">
-                                <img class="w-48px" src="img/icons/asistencia.svg" alt="Custodia virtual">
-                            </div>
-                            <h3 class="title_servicioMonitoreo fs_22px pt-2">Asistencia logística</h3>
-                            <p>Trabajamos con distintos socios internacionales alrededor del mundo</p>
-                        </div>
+                    <div class="col-12 col-lg-4 d-flex justify-content-center align-items-center">
+                        <img src="img/bg/world.png" class="img-fluid world-image" alt="Mundo">
                     </div>
                 </div>
             </div>
