Ajustes a iconos y fondo de monitoreo

--- a/index.htm
+++ b/index.htm
@@ -260,12 +260,10 @@
                 <span class="RobotoBold fs_24px text-uppercase">Servicios Generales</span>
                 <h2 class="py-3">Servicios de logística Seguros, más rápidos y confiables en donde sea</h2>
                 <div class=" row align-items-start">
-                    <div class="col-12 col-md-6 d-flex justify-content-center">
-                        <div class="d-flex flex-row align-items-center">
-                            <img src="img/bg/BuqueO.jpg" class="img-fluid oval-image responsive-img" alt="Buque">
-                            <img src="img/bg/Camion.jpg" class="img-fluid oval-image mt-3 responsive-img" alt="Camion">
-                            <img src="img/bg/Avion.jpg" class="img-fluid oval-image mt-3 responsive-img" alt="Avion">
-                        </div>
+                    <div class="col-12 col-md-6 d-flex justify-content-center flex-row align-items-center oval-container">
+                        <img src="img/bg/BuqueO.jpg" class="img-fluid oval-image responsive-img" alt="Buque">
+                        <img src="img/bg/Camion.jpg" class="img-fluid oval-image mt-3 responsive-img" alt="Camion">
+                        <img src="img/bg/Avion.jpg" class="img-fluid oval-image mt-3 responsive-img" alt="Avion">
                     </div>
                     <div class="col-12 col-md-6 d-flex flex-column align-items-start" style="width: 40%; margin-left: 5rem;">
                         <div class="text-box mb-3" >
@@ -293,41 +291,41 @@
         <div class="container-fluid p-0">
             <div class="row align-items-center">
                 <div class="col-12 col-md-6 p-0">
-                    <img src="img/bg/carga.jpg" class="img-fluid large-image position-relative" alt="Large Image" style="width: 100%; height: auto;">
+                    <img src="img/bg/carga.jpg" class="img-fluid large-image position-relative carga-image" alt="Large Image">
                 </div>
                 <div class="col-12 col-md-6">
                     <div class="row">
                         <div class="col-12 col-md-6 mb-3">
                             <div class="text-box bg-white">
-                                <img src="img/icons/pesaje.svg" class="w-24px me-2" alt="Pesajes VGM">
-                                <h3 class="fs_22px pt-2 text-yellow">Pesajes VGM</h3>
+                                <img src="img/icons/pesaje.svg" class="w-24px me-2 icon-general" alt="Pesajes VGM">
+                                <h3 class="fs_22px pt-2 text-black text-uppercase RobotoBold">Pesajes VGM</h3>
                                 <p class="text-black">Trabajamos con distintos socios internacionales alrededor del mundo</p>
                             </div>
                         </div>
                         <div class="col-12 col-md-6 mb-3">
                             <div class="text-box bg-white">
-                                <img src="img/icons/aduanas.svg" class="w-24px me-2" alt="Agenciamiento Aduanal">
-                                <h3 class="fs_22px pt-2 text-yellow">Agenciamiento Aduanal</h3>
+                                <img src="img/icons/aduanas.svg" class="w-24px me-2 icon-general" alt="Agenciamiento Aduanal">
+                                <h3 class="fs_22px pt-2 text-black text-uppercase RobotoBold">Agenciamiento Aduanal</h3>
                                 <p class="text-black">Trabajamos con distintos socios internacionales alrededor del mundo</p>
                             </div>
                         </div>
                         <div class="col-12 col-md-6 mb-3">
                             <div class="text-box bg-white">
-                                <img src="img/icons/consolidacion.svg" class="w-24px me-2" alt="Consolidación">
-                                <h3 class="fs_22px pt-2 text-yellow">Consolidación</h3>
+                                <img src="img/icons/consolidacion.svg" class="w-24px me-2 icon-general" alt="Consolidación">
+                                <h3 class="fs_22px pt-2 text-black text-uppercase RobotoBold">Consolidación</h3>
                                 <p class="text-black">Trabajamos con distintos socios internacionales alrededor del mundo</p>
                             </div>
                         </div>
                         <div class="col-12 col-md-6 mb-3">
                             <div class="text-box bg-white">
-                                <img src="img/icons/almacen_1.svg" class="w-24px me-2" alt="Almacenaje">
-                                <h3 class="fs_22px pt-2 text-yellow">Almacenaje</h3>
+                                <img src="img/icons/almacen_1.svg" class="w-24px me-2 icon-general" alt="Almacenaje">
+                                <h3 class="fs_22px pt-2 text-black text-uppercase RobotoBold">Almacenaje</h3>
                                 <p class="text-black">Trabajamos con distintos socios internacionales alrededor del mundo</p>
                             </div>
                         </div>
                     </div>
                 </div>
-        <section id="ServiciosMonitoreo" class="mb-5">
+        <section id="ServiciosMonitoreo" class="mb-5 mt-5">
             <div class="container">
                 <span class="RobotoBold fs_24px text-uppercase">Servicios de Monitoreo</span>
                 <h2 class="py-3 ">Servicios de logística Seguros, más rápidos y confiables en donde sea</h2>
@@ -335,9 +333,9 @@
                     <div class="col-12 col-lg-8">
                         <div class="row">
                             <div class="col-12 col-md-6 col-xl-6 p-1">
-                                <div class="card bg-slave border-0 p-3 m-2">
+                                <div class="card bg-slave border-0 p-3 m-2" style="box-shadow: 3rem;">
                                     <div class="icon-cont">
-                                        <img class="w-48px" src="img/icons/gps.svg" alt="Servicio Internacional">
+                                        <img class="icon-image w-48px" src="img/icons/gps.svg" alt="Servicio Internacional">
                                     </div>
                                     <h3 class="title_servicioMonitoreo fs_22px pt-2">Seguimiento en tiempo real</h3>
                                     <p>Trabajamos con distintos socios internacionales alrededor del mundo</p>
@@ -346,7 +344,7 @@
                             <div class="col-12 col-md-6 col-xl-6 p-1">
                                 <div class="card bg-slave border-0 p-3 m-2">
                                     <div class="icon-cont">
-                                        <img class="w-48px" src="img/icons/custodia.svg" alt="Soporte 24/7">
+                                        <img class="icon-image w-48px" src="img/icons/custodia.svg" alt="Soporte 24/7">
                                     </div>
                                     <h3 class="title_servicioMonitoreo fs_22px pt-2">Custodia Virtual</h3>
                                     <p>Trabajamos con distintos socios internacionales alrededor del mundo</p>
@@ -355,7 +353,7 @@
                             <div class="col-12 col-md-6 col-xl-6 p-1">
                                 <div class="card bg-slave border-0 p-3 m-2">
                                     <div class="icon-cont">
-                                        <img class="w-48px" src="img/icons/rapido.svg" alt="Rápido y Seguro">
+                                        <img class="icon-image w-48px" src="img/icons/rapido.svg" alt="Rápido y Seguro">
                                     </div>
                                     <h3 class="title_servicioMonitoreo fs_22px pt-2">Optimización de Tiempo en Transito</h3>
                                     <p>Trabajamos con distintos socios internacionales alrededor del mundo</p>
@@ -364,7 +362,7 @@
                             <div class="col-12 col-md-6 col-xl-6 p-1">
                                 <div class="card bg-slave border-0 p-3 m-2">
                                     <div class="icon-cont">
-                                        <img class="w-48px" src="img/icons/riesgos.svg" alt="Almacenaje a nivel nacional">
+                                        <img class="icon-image w-48px" src="img/icons/riesgos.svg" alt="Almacenaje a nivel nacional">
                                     </div>
                                     <h3 class="title_servicioMonitoreo fs_22px pt-2">Detección de riesgos</h3>
                                     <p>Trabajamos con distintos socios internacionales alrededor del mundo</p>
@@ -373,7 +371,7 @@
                             <div class="col-12 col-md-6 col-xl-6 p-1">
                                 <div class="card bg-slave border-0 p-3 m-2">
                                     <div class="icon-cont">
-                                        <img class="w-48px" src="img/icons/24-7.svg" alt="Optimización de tiempos en transito">
+                                        <img class="icon-image w-48px" src="img/icons/24-7.svg" alt="Optimización de tiempos en transito">
                                     </div>
                                     <h3 class="title_servicioMonitoreo fs_22px pt-2">Trazabilidad 24/7</h3>
                                     <p>Trabajamos con distintos socios internacionales alrededor del mundo</p>
@@ -382,7 +380,7 @@
                             <div class="col-12 col-md-6 col-xl-6 p-1">
                                 <div class="card bg-slave border-0 p-3 m-2">
                                     <div class="icon-cont">
-                                        <img class="w-48px" src="img/icons/protocolos.svg" alt="Custodia virtual">
+                                        <img class="icon-image w-48px" src="img/icons/protocolos.svg" alt="Custodia virtual">
                                     </div>
                                     <h3 class="title_servicioMonitoreo fs_22px pt-2">Protocolos de seguridad</h3>
                                     <p>Trabajamos con distintos socios internacionales alrededor del mundo</p>
@@ -391,7 +389,7 @@
                             <div class="col-12 col-md-6 col-xl-6 p-1">
                                 <div class="card bg-slave border-0 p-3 m-2">
                                     <div class="icon-cont">
-                                        <img class="w-48px" src="img/icons/ruta.svg" alt="Optimización de tiempos en transito">
+                                        <img class="icon-image w-48px" src="img/icons/ruta.svg" alt="Optimización de tiempos en transito">
                                     </div>
                                     <h3 class="title_servicioMonitoreo fs_22px pt-2">Rutas diseñadas para cada cliente</h3>
                                     <p>Trabajamos con distintos socios internacionales alrededor del mundo</p>
@@ -400,9 +398,9 @@
                             <div class="col-12 col-md-6 col-xl-6 p-1">
                                 <div class="card bg-slave border-0 p-3 m-2">
                                     <div class="icon-cont">
-                                        <img class="w-48px" src="img/icons/asistencia.svg" alt="Custodia virtual">
+                                        <img class="icon-image w-48px" src="img/icons/asistencia.svg" alt="Custodia virtual">
                                     </div>
-                                    <h3 class="title_servicioMonitoreo fs_22px pt-2">Asistencia logística</h3>
+                                    <h3 class="title_servicioMonitoreo fs_22px">Asistencia logística</h3>
                                     <p>Trabajamos con distintos socios internacionales alrededor del mundo</p>
                                 </div>
                             </div>
@@ -417,7 +415,7 @@
 
         <section class="bg-secundario">
             <div class="container-fluid">
-                <h2 class="py-5 text-center">Comentarios de Nuestros Clientes</h2>
+                <h2 class="py-5 text-center RobotoBold">Comentarios de Nuestros Clientes</h2>
                 <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
